# wuhao-tutor

./: .coverage  .env  .env.backup  .env.docker.production  .env.example  .env.prod  .env.template  .flake8  .gitignore  .mcp.json  .qoderignore  AGENTS.md  AGENTS_zh.md  AI-CONTEXT.md  AI-DRIVEN-MISTAKE-BOOK-DEVELOPMENT-GUIDE.md  API_ALIGNMENT_SUMMARY.md  API_TEST_RESULTS.md  AVATAR_FIX_QUICKSTART.md  CHANGELOG.md  CLEANUP_SUMMARY.md  COPILOT_SUGGESTIONS.md  CURRENT_DEVELOPMENT_GUIDE.md  DEVELOPMENT_CONTEXT.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_ROADMAP.md  DEVELOPMENT_STATUS.md  DOCS_REVIEW_REPORT.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  ECHART_FIX_PLAN.md  FOLDER_STRUCTURE.md  FORMULA_FIX_SUMMARY.md  HOMEPAGE_API_RESPONSE_FIX.md  HOMEPAGE_CLEANUP_DONE.md  HOMEPAGE_DIAGNOSIS_REPORT.md  HOMEPAGE_STAGE3_RECOMMENDATIONS.md  HOMEPAGE_STATS_ERROR_ANALYSIS.md  HOMEPAGE_STATS_FIXED.md  HOMEPAGE_STATS_SOURCE_ANALYSIS.md  KNOWLEDGE_GRAPH_ALIGNMENT_ANALYSIS.md  (+110 more)
.github/: copilot-instructions.md
.qoder/quests/: mini-program-feature-alignment.md
.qoder/rules/: ai-coding-rules.md  globalRules.md
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
alembic/: env.py
alembic/versions/: 20251012_add_mistake_reviews_table.py  20251103_add_knowledge_graph_tables.py  20251104_add_formula_cache_table.py  20251104_add_updated_at_to_snapshots.py  3b5dff6e22e1_align_learning_tracks_with_model.py  4299371f3320_add_performance_indexes_for_homework_api.py  4b0c11bd46a4_add_knowledge_mastery_index_for_subject_.py  4e983abcec30_merge_review_session_branches.py  514d24f19ff7_初始化数据库表结构.py  530d40eea860_add_analytics_performance_indexes.py  5b2fedd12211_merge_heads_before_performance_.py  69fa4d4475a5_add_knowledge_graph_fields_to_mistake_.py  7a991754681d_add_revision_plans_table.py  8656ac8e3fe6_create_all_missing_tables.py  9ed9ad5ef837_add_mistake_id_to_learning_tracks.py  add_error_book_tables.py  add_mistake_source.py  add_ocr_enhancement_fields.py  create_review_sessions_table.py  d733cab41568_add_mistake_fields_for_homework_.py  (+1 more)
backup/: README.md
backups/: README.md.backup  auth.js.backup
config/: README.md
data/: README.md
docs/: ARCHITECTURE.md  CONTEXT-CONSOLIDATION.md  DEPLOYMENT.md  DEVELOPMENT_CONTEXT.md  DEVELOPMENT_ROADMAP.md  DOCS-README.md  DOCUMENTATION_CLEANUP_REPORT.md  DOCUMENTATION_CLEANUP_SUMMARY.md  DOCUMENTATION_REORGANIZATION_COMPLETE.md  DOCUMENTATION_REORGANIZATION_PLAN.md  DOCUMENTATION_REORGANIZATION_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY.md  FRONTEND_REFACTOR_SUMMARY.md  MISTAKE_EXTRACTION_OPTIMIZATION.md  OBSERVABILITY.md  PHASE5_1_COMPLETION_SUMMARY.md  PHASE5_INTEGRATION_TEST.md  PHASE5_MANUAL_TEST_CHECKLIST.md  PHASE5_QUICKSTART.md  PRODUCTION_DIAGNOSTIC_REPORT.md  PRODUCTION_OPTIMIZATION_PLAN.md  PROJECT_DEVELOPMENT_STATUS.md  PROJECT_STATUS_REPORT.md  README.md  STATUS.md  TASK_5_IMAGE_OCR_OPTIMIZATION_SUMMARY.md  TESTING.md  analyse-data.json  api.md  error-book-acceptance-test.md  markdown-render-simple.md  miniprogram-mistake-mvp-implementation.md  miniprogram-mistakes-module-analysis.md  mistakes-batch-import-analysis.md  mistakes-from-learning-frontend-todo.md  mistakes-from-learning-mvp-plan.md  mobile-browser-compatibility-implementation.md  mobile-browser-compatibility-quickref.md  task-5.2-summary.md  task-5.3-summary.md  (+9 more)
docs_backup_20251004/: DEVELOPMENT.md  FRONTEND-INTEGRATION.md  GLOSSARY.md  MIGRATION.md  PROJECT_STATUS_REPORT.md  README.md  SECURITY.md  WECHAT_AUTH_IMPLEMENTATION.md
examples/: knowledge_extraction_example.py
frontend/: .env.development  .gitignore  FRONTEND-README.md  LOGIN_FIX_SUMMARY.md  MATH_FORMULA_TEST.md  README.md  TASK-6.3-SUMMARY.md  index.html  package-lock.json  package.json  tailwind.config.js  test-api-fixes.js  tsconfig.json  vite.config.ts
miniprogram/: .eslintrc.js  .gitignore  .prettierignore  .prettierrc  ASR语音识别问题修复指南.md  ASYNC_FIX.md  CHAT_API_FIX.md  DEVELOPMENT-PROGRESS-REPORT.md  FONT_FIX.md  IMPLEMENTATION_REPORT.md  NETWORK_LAYER_SUMMARY.md  README.md  REFACTORING_REPORT.md  TROUBLESHOOTING.md  UI_INTEGRATION_SUMMARY.md  app.js  app.json  app.wxss  create-icons.sh  generate-icons.py  generate-icons.sh  package.json  project.config.json  project.config.json.backup  theme.json  下一步优先级行动计划_修正版.md  开发调试指南.md  当前状态与操作.md  环境配置说明.md  用户操作指南.md  立即修复-域名校验.md  紧急修复指南.md  问题诊断指南.md
monitoring/: README.md  prometheus.yml
nginx/: README.md  nginx.conf  websocket-support.conf  wuhao-tutor-clean.conf  wuhao-tutor.conf  wuhao-tutor.conf.before-cleanup
reports/: miniprogram_api_alignment_report.json  task_1_5_test_report_20251003_075701.json  task_1_5_test_report_20251003_075715.json
scripts/: DEPLOY-README.md  LOGGING_GUIDE.md  README.md  SCRIPTS-README.md  TEST_REPORTS_GUIDE.md  add_missing_homework_columns.sql  analyze-backend-endpoints.sh  analyze-miniprogram-calls.sh  analyze_api_diff.py  analyze_api_diff_fixed.py  analyze_api_diff_safe.py  analyze_backend_alignment.py  analyze_miniprogram_api.py  backfill_knowledge_associations.py  backfill_knowledge_graph.py  backfill_knowledge_points.py  build_frontend.sh  check-production.sh  check_api_key.sh  check_learning_pattern_data.py  check_miniprogram_config.sh  check_mistake_data.py  check_snapshot_columns.py  check_table_structure.py  check_user_data.py  check_user_data_simple.py  clean-miniprogram.sh  clean-unused-files.sh  cleanup_user_data.py  compare-api-usage.py  create_dev_test_accounts.py  create_test_mistakes.py  create_test_user.py  create_user.py  create_user_15662660599.sql  create_user_direct.py  daily_snapshot.py  db_backup.py  db_config.py  db_optimization.py  (+108 more)
secrets/: api_key.txt  encryption_key.txt  grafana_password.txt  jwt_secret.txt  postgres_password.txt  redis_password.txt
src/: main.py
tests/: TEST_COMPLETION_REPORT.md  api_integration_test.py  conftest.py  factories.py  test_learning_api_simple.py  test_mistake_detection_fix.py  test_session_title_auto_update.py  test_websocket_long_stream.py  test_websocket_timeout_fix.py
(+783 files in other folders)
